# dangerously-prompt-permissions

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
dangerously_prompt_permissions/: __init__.py  manager.py
examples/: advanced_usage.py  basic_usage.py
